feat: add username/password web scraping login flow
Replace refresh_token-only auth with web scraping OIDC login.
- Auth now accepts username/password (preferred) or refresh_token (legacy)
- Implements the same login flow as buildinglink.com website
- Extracts auth redirect URL, fills login form, posts to OIDC callback
- Auto re-login when token expires (15 min)
- Add lxml dependency for HTML form parsing
- Bump version to 0.2.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pybuildinglink"
-version = "0.1.0"
+version = "0.2.0"
 description = "Async Python client for the BuildingLink API"
 readme = "README.md"
 license = "MIT"
@@ -23,6 +23,7 @@ classifiers = [
 ]
 dependencies = [
     "aiohttp>=3.9.0",
+    "lxml>=5.0.0",
     "pydantic>=2.0.0",
 ]
 
